Adds /ping endpoint and EXTRA env var for additional configuration on upstream locations

--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -15,7 +15,14 @@ http {
             }
             auth_basic $auth_basic;
             auth_basic_user_file /etc/nginx/.htpasswd;
+
+            ${EXTRA}
         }
+
+	location /ping {
+	    access_log off;
+	    return 200 "healthy\n";
+	}
     }
 }
 
